Modified architecture and added features